[FIX] sap.m.Slider: Slider in not cut off in compactMode anymore
- Slider gets cut off when in sap.m.Bar in compactMode

BCP: 1770208628
CR-Id: 002075125900001810432017

--- a/src/sap.m/src/sap/m/themes/base/Slider.less
+++ b/src/sap.m/src/sap/m/themes/base/Slider.less
@@ -136,7 +136,7 @@
 /* slider */
 .sapUiSizeCompact {
 	.sapMSlider {
-		height: 2.5625rem;
+		height: 2rem;
 		padding-top: 1rem;
 		padding-bottom: 1rem;
 	}
